--- a/src/core/views/AirportFrame.form
+++ b/src/core/views/AirportFrame.form
@@ -1604,7 +1604,7 @@
                           <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="addFlight" min="-2" max="-2" attributes="0"/>
-                              <Component id="addFlightId" min="-2" pref="130" max="-2" attributes="0"/>
+                              <Component id="PassengerIdToAddFlight" min="-2" pref="130" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="829" max="32767" attributes="0"/>
                       </Group>
@@ -1624,7 +1624,7 @@
                                   <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
                                   <Component id="jLabel44" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="addFlightId" min="-2" max="-2" attributes="0"/>
+                              <Component id="PassengerIdToAddFlight" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -1639,7 +1639,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JTextField" name="addFlightId">
+                <Component class="javax.swing.JTextField" name="PassengerIdToAddFlight">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Yu Gothic UI" size="18" style="0"/>
